# autotree

./: .dockerignore  .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md
core/: README.md  pyproject.toml
core/autotree_core/: __init__.py
core/autotree_core/engine/: __init__.py  protocol.py  treekv.py
core/autotree_core/kernels/: __init__.py  bench_decode.py  dispatch.py  reference.py  triton_kernel.py
core/autotree_core/kv/: __init__.py  config.py  dedup.py  errors.py  gather.py  pool.py  tree_state.py
core/autotree_core/modeling/: __init__.py  config.py  executor.py
core/docs/: a100-validation.md  tree-kv-spec.md  wire-spec.md
core/tests/engine/: __init__.py  conftest.py  test_treekv_engine.py
core/tests/kernels/: __init__.py  cases.py  test_bench_decode.py  test_dispatch.py  test_import_guard.py  test_reference.py  test_triton_parity.py
core/tests/kv/: test_dedup.py  test_gather.py  test_pool.py  test_public_api.py  (+2 more)
figures/: README.md  make_figures.py  pyproject.toml
figures/autotree_figures/: __init__.py  contracts.py  loaders.py  metrics.py  models.py  pipeline.py  renderers.py  theme.py
figures/fixtures/: all-figures.fixture.json  branch-1.config.json  branch-1.results.json  branch-16.config.json  branch-16.results.json  branch-2.config.json  branch-2.results.json  branch-32.config.json  branch-32.results.json  branch-4.config.json  branch-4.results.json  branch-8.config.json  branch-8.results.json  build_publication_fixtures.py  demo-sequential.results.json  demo-tree.results.json  publication-branch-1.results.json  publication-branch-16.results.json  publication-branch-2.results.json  publication-branch-32.results.json  publication-branch-4.results.json  publication-branch-8.results.json  publication-llama31-8b-autotree.results.json  publication-llama31-8b-sequential.results.json  publication-llama31-8b-sglang.results.json  publication-llama31-8b-vllm.results.json  publication-qwen3-32b-autotree.results.json  publication-qwen3-32b-sequential.results.json  publication-qwen3-32b-sglang.results.json  publication-qwen3-32b-vllm.results.json  publication-qwen3-8b-autotree.results.json  publication-qwen3-8b-sequential.results.json  publication-qwen3-8b-sglang.results.json  publication-qwen3-8b-vllm.results.json  publication-r1-distill-70b-autotree.results.json  publication-r1-distill-70b-sequential.results.json  publication-r1-distill-70b-sglang.results.json  publication-r1-distill-70b-vllm.results.json  sweep-sequential.config.json  sweep-sequential.results.json  (+2 more)
figures/tests/: test_figure_axes.py  test_honesty_contracts.py  test_pipeline.py
scheduler/: Cargo.toml
scheduler/src/: adaptive.rs  budget.rs  command.rs  error.rs  lib.rs  policy.rs  python.rs  scheduler.rs  scorer.rs  types.rs
scheduler/tests/: adaptive_forking.rs  branch_tree.rs  determinism.rs  policies.rs  properties.rs  python_feature.rs  scheduler_core.rs
sdk/: README.md  pyproject.toml
sdk/autotree_sdk/: __init__.py  client.py  errors.py  models.py  rollout.py  sse.py  trace.py
sdk/tests/: conftest.py  mock_asgi.py  test_client.py  test_rollout.py  test_server_contract.py  test_trace_invariants.py  test_trace_red_pins.py
serve/: .gitignore  CAPACITY.md  README.md  pyproject.toml
serve/autotree_serve/: __init__.py  app.py  cli.py  engine.py  enterprise.py  metrics.py  runner.py  schema.py
serve/tests/: conftest.py  test_cli_and_engine.py  test_engine_contracts.py  test_enterprise_middleware.py  test_health.py  test_identity.py  test_metrics_and_errors.py  test_openai_compat.py  test_playground.py  test_responsiveness.py  test_shutdown.py  test_tree_streaming.py  test_treekv_e2e.py
thoughtbench/: README.md  pyproject.toml
thoughtbench/fixtures/: demo-sequential.json  demo-tree.json  tasks.jsonl
thoughtbench/results/: math500-subset25.jsonl  qwen3-8b-math500-sequential.results.json  qwen3-8b-math500-tree.results.json
thoughtbench/tests/: test_config.py  test_e2e.py  test_graders.py  test_metrics.py  test_resume.py  test_schema.py  test_tasks.py
thoughtbench/thoughtbench/: __init__.py  cli.py  graders.py  metrics.py  models.py  report.py  runner.py  schema.py  tasks.py
(+46 files in other folders)
