[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "autotree-core"
version = "0.1.0"
description = "Tree-KV engine: copy-on-write paged KV cache with fork/merge/prune and branch-aware tree attention for LLM test-time compute"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
  "torch>=2.4",
  "numpy>=1.26",
]

[project.optional-dependencies]
triton = ["triton>=3.0; platform_system == 'Linux'"]
modeling = ["transformers>=4.44", "safetensors>=0.4"]
engine = ["transformers>=4.44", "safetensors>=0.4"]
dev = [
  "pytest>=8",
  "hypothesis>=6",
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
include = ["autotree_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
