[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autotree-figures"
version = "0.1.0"
description = "Deterministic publication figure pipeline for ThoughtBench results"
requires-python = ">=3.12"
dependencies = [
  "jsonschema>=4.23,<5",
  "matplotlib>=3.10,<4",
  "numpy>=2.2,<3",
  "pydantic>=2.10,<3",
]

[dependency-groups]
dev = ["pytest>=8.3,<9"]

[tool.hatch.build.targets.wheel]
packages = ["autotree_figures"]

[tool.pytest.ini_options]
testpaths = ["tests"]
