[package]
name = "autotree-scheduler"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "Apache-2.0"
description = "Deterministic branch scheduler for AutoTree tree-structured decoding"

[lib]
name = "autotree_scheduler"
crate-type = ["rlib", "cdylib"]

[features]
default = []
python = ["dep:pyo3"]

[dependencies]
pyo3 = { version = "0.29.0", optional = true, features = ["abi3-py312"] }
rand = { version = "=0.9.2", default-features = false, features = ["std"] }
rand_chacha = { version = "=0.9.0", default-features = false }

[dev-dependencies]
proptest = "1.9.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
