[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autotree-sdk"
version = "0.1.0"
description = "Typed Python client and RL rollout traces for AutoTree"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.8,<3",
]

[project.optional-dependencies]
dev = [
  "autotree-serve",
  "hypothesis>=6.100,<7",
  "pytest>=8.2,<9",
]

[tool.uv.sources]
autotree-serve = { path = "../serve", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["autotree_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
